# python-project-83

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  database.sql  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
docker-images/backend/: .env.default  Dockerfile
docker-images/postgres/: .env.default  Dockerfile  schema.sql
page_analyzer/: app.py
page_analyzer/templates/: base.html  index.html  page_not_found.html  url.html  urls.html
page_analyzer/utils/: db.py  url.py
tests/: conftest.py  test_app.py
tests/fixtures/: expected_index.html  expected_index_incorrect_url.html  expected_page_not_found.html  expected_url.html  expected_url_add.html  expected_url_check_fails.html  expected_url_checks_add.html  expected_url_exists.html  expected_url_with_checks.html  expected_urls.html  expected_urls_empty.html
tests/utils/: test_db.py  test_url.py
