[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "simple web-page analyzer"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
repository = "https://github.com/AlexMomot-717/python-project-83"
readme = "README.md"
authors = ["Aleksandra Naumenko <momotav717@gmail.com>"]
packages = [
    {include = "page_analyzer"},
]

[tool.poetry.dependencies]
python = "^3.10"
Flask-Bootstrap = "^3.3.7.1"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.2.2"
black = "^23.3.0"
flake8 = "^6.0.0"
gitlint = "^0.19.1"
isort = "^5.12.0"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
