[tool.poetry]
name = "hexlet-code"
version = "0.3.0"
description = "simple tool for web-page analyzing"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = ["alexandra <momotav717@gmail.com>"]
readme = "README.md"
packages = [
    {include = "page_analyzer"},
]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.3"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pre-commit = "^3.6.0"
black = "^23.12.1"
gitlint = "^0.19.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
types-psycopg2 = "^2.9.21.20240118"

[tool.isort]
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
# Should be: 80 - 1
line_length = 79

[tool.mypy]
python_version = 3.11
strict = true

[[tool.mypy.overrides]]
module = "validators"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
