[tool.poetry]
name = "hexlet-code"
version = "0.6.0"
description = "simple tool for web-page analyzing"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
authors = ["alexandra <momotav717@gmail.com>"]
readme = "README.md"
packages = [
    {include = "page_analyzer"},
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^3.0.0"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"
jinja2 = "^3.1.3"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
coverage = "^7.4.2"
pytest-cov = "^4.1.0"
pre-commit = "^3.6.0"
black = "^23.12.1"
gitlint = "^0.19.1"
isort = "^5.13.2"
mypy = "^1.8.0"
flake8 = "^7.0.0"
types-psycopg2 = "^2.9.21.20240118"
types-requests = "^2.31.0.20240125"
types-beautifulsoup4 = "^4.12.0.20240106"
freezegun = "^1.4.0"

[tool.isort]
# See https://github.com/timothycrosley/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
default_section = "FIRSTPARTY"
# Should be: 80 - 1
line_length = 79

[tool.mypy]
python_version = 3.11
strict = true

[[tool.mypy.overrides]]
module = "validators"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
